@@ -1,12 +1,19 @@
 {
-  "timestamp" : "2022-07-04T00:56:10Z",
+  "timestamp" : "2022-07-08T08:13:43Z",
   "count_outdated" : 424,
   "uniques_outdated" : 30,
-  "count" : 427,
-  "uniques" : 31,
+  "count" : 430,
+  "uniques" : 32,
   "views" : [
     {
       "timestamp": "2022-06-28T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-08T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "uniques": 1,
