@@ -1,9 +1,14 @@
 {
-  "count": 3,
+  "count": 6,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-06-28T00:00:00Z",
+      "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-08T00:00:00Z",
       "count": 3,
       "uniques": 1
     }
